# simple-lfs

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
dependencies/: CMakeLists.txt
source/: assertions.hpp  configuration.cc  configuration.hpp  error_type.hpp  exception.hpp  hashing.cc  hashing.hpp  main.cc  server.cc  server.hpp  storage.cc  storage.hpp  structs.cc  structs.hpp  uuid.cc  uuid.hpp
